# NewYear2023Event

./: .gitignore  Cargo.toml  README.md  build.sh  convert.sh  event.todo  flake.nix  schedule.txt  test_controls.html
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: m2v2m8cjv88yqkgmacz4y6byn1g250d0-source
Assets/Animation/: Animation.ase  Animation.mov  AnimationSilent.mov  Background.ase
crates/animate/: Cargo.toml
crates/animate/src/: lib.rs
crates/place/: Cargo.toml
crates/place/src/: lib.rs
crates/points/: Cargo.toml
crates/points/src/: lib.rs
crates/queue/: Cargo.toml
crates/queue/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  main.rs  streamer.rs
crates/tetro/: Cargo.toml
crates/tetro/src/: game.rs  lib.rs  tetromino.rs
crates/tttoe/: Cargo.toml
crates/tttoe/src/: game.rs  lib.rs
crates/web-editor/: Cargo.toml
crates/web-editor/src/: lib.rs
html/account/: auth.js  index.html  sign-in.html
html/controller/lib/: meta.html  nav.html
html/controller/place/: api.js  index.html
html/controller/place/template/: javascript.js
html/controller/tetro/: api.js  index.html
html/controller/tetro/template/: javascript.js  python.py
html/controller/tttoe/: api.js  index.html
html/controller/tttoe/template/: javascript.js
html/editor/: editor.css  editor.js  index.html  run.js  themeing.js  themes.js  worker.js
html/leaderboard/: index.html
scheduler/: Cargo.toml
scheduler/src/: lib.rs  main.rs  streamer.rs
src/: main.rs  mixer.rs  renderer.rs  streamer.rs
src/streamer/: mod.rs
src/streamer/mixer/: mod.rs  source.rs
tetro/: Cargo.toml
tetro/src/: lib.rs
