[package]
name = "new-year-2024"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = { version = "0.21.2" }
gstreamer-base = "0.21.2"
gstreamer-app = { version = "0.21.2" }
gstreamer-video = "0.21.2"
gstreamer-audio = "0.21.2"

cairo-rs = "0.18.3"
minimp3 = "0.5.1"

serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"

hhmmss = "0.1.0"
glib = "0.18.3"
