[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
gstreamer = { version = "0.21.2" }
gstreamer-base = "0.21.2"
gstreamer-app = { version = "0.21.2" }
gstreamer-video = "0.21.2"
gstreamer-audio = "0.21.2"

cairo-rs = "0.18.3"
rodio = "0.17.3"

serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"

hhmmss = "0.1.0"
glib = "0.18.3"
libloading = "0.8.1"
chrono = "0.4.31"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
