[package]
name = "points"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = { version = "0.4.20", features = ["std"] }

scheduler = { path = "../scheduler" }
cairo-rs = "0.18.3"

warp = "0.3.6"
futures-util = "0.3.29"
tokio = "1.34.0"

batbox-la = "0.16.0"
rs-firebase-admin-sdk = "1.2.2"
fast_firestore = "0.1.6"
json = "0.12.4"
