[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
simplelog = "0.12.1"
log = "0.4.20"

gstreamer = { version = "0.21.2" }
gstreamer-base = "0.21.2"
gstreamer-app = { version = "0.21.2" }
gstreamer-video = "0.21.2"
gstreamer-audio = "0.21.2"
glib = "0.18.3"

cairo-rs = "0.18.3"

serde = { version = "1.0.190", features = ["derive"] }
toml = "0.8.6"
libloading = "0.8.1"

hhmmss = "0.1.0"
chrono = "0.4.31"

tokio = { version = "1.0.0", features = ["full"] }
warp = "0.3.6"
