[package]
name = "tetro"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
log = { version = "0.4.20", features = ["std"] }

scheduler = { path = "../scheduler" }
cairo-rs = "0.18.3"
rodio = "0.17.3"

warp = "0.3.6"
futures-util = "0.3.29"
tokio = "1.34.0"
rand = "0.8.5"

batbox-la = "0.16.0"
tween = "2.0.2"
bidivec = "0.1.0"
rs-firebase-admin-sdk = "1.2.2"
