[package]
name = "web-editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustpython-stdlib = { git = "https://github.com/RustPython/RustPython.git" }
rustpython-vm = { git = "https://github.com/RustPython/RustPython.git", features = [
    "freeze-stdlib",
] }
wasm-bindgen = "0.2"
